# crewAI-efax-assistant

./: .gitignore  README.md  pyproject.toml
src/efax_assistant/: crew.py  main.py
src/efax_assistant/config/: agents.yaml  tasks.yaml
