[project]
name = "efax_assistant"
version = "0.1.0"
description = "efax_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
efax_assistant = "efax_assistant.main:run"
run_crew = "efax_assistant.main:run"
train = "efax_assistant.main:train"
replay = "efax_assistant.main:replay"
test = "efax_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
